# Agentic_RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
src/config/: config.py
src/document_ingestion/: document_processor.py
src/node/: reactnode.py
src/vectorstore/: vectorstore.py
